# rust-log-agent

./: .gitignore  Cargo.toml  LICENSE  README.md  log-agent.yml
src/: config.rs  detector.rs  event_bucket.rs  log_event.rs  main.rs  sender.rs  watcher.rs
src/config/: config.rs  config_error.rs  global_config.rs  mod.rs  source_config.rs
src/detector/: detect_error.rs  detect_event.rs  detector.rs  error.rs  event.rs  mod.rs
src/sender/: error.rs  http_sender_strategy.rs  log_data.rs  log_sender.rs  mod.rs  payload.rs  sender_error.rs
src/sender/http/: http_error.rs  http_sender.rs  log_body.rs  mod.rs
src/sender/http_sender/: mod.rs
src/sender/strategies/: http.rs  mod.rs
src/sender/strategies/http/: http_error.rs
src/sender/ws_sender/: mod.rs  ws_error.rs
src/watcher/: mod.rs  watch_error.rs  watch_event.rs  watcher.rs
