[package]
name = "log-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
