[package]
name = "log-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
url = "2.5.7"

[profile.release]
debug = true
